welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: not found: value <
		case c<d  => a
                      ^close10:6: error: not found: value >
		case c>d  => b
                      ^close10:7: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
		case c==d => 0
                      ^